# GradOCP

./: .gitignore  LICENSE  README.md  pyproject.toml
GradOCP/: core.py  core2.py  variables.py
GradOCP.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_backward.py  test_bilevel_opt.py  test_ocp_basic.py  test_ocp_solver.py  test_variables.py
tutorial/: simple_bilevel.ipynb
